Fix prompt spacing getting reset on restart commands

--- a/web-interface/style.css
+++ b/web-interface/style.css
@@ -110,3 +110,10 @@ body.play #splash {
 body[data-auto-complete="false"] #auto-complete {
   visibility: hidden;
 }
+
+#lineinput-field {
+  /* Small increase in space by the prompt.  This is cheaper than overwriting
+   * the prompt on every turn, which is the only other way I found to keep the
+   * prompt from reverting to stock on a "restart" command. */
+  padding-left: 0.5em;
+}
